tests/miniJava/pos/001029_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) java = 0 ; else java = 0 ; } }
