tests/miniJava/neg/000579_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class java { public static void Main ( String [ ] java ) { { } } } ! 0 ; } }
